--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div>
 		<h2>Один вопрос</h2>
-		<p>Открыть сайт построенный на фреймворке(Bootstrap)?</p>
+		<p>Открыть сайт построенный на Bootstrap?</p>
 	</div>
 	<div>
 		<a href="ka4vis_bootstrap\ka4vis_bootstrap.html"><div id="yes_bt" class="bt">ДА</div></a>
