--- a/ka4vis/ka4vis.html
+++ b/ka4vis/ka4vis.html
@@ -3,45 +3,88 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="ka4vis_styles.css">
-	<title>Сайт визитка</title>
+	<title>Ka4viS</title>
 </head>
 <body>
 	<div id="container">
 		<header>
-			<h1>Cайт визитка</h1>
+			<div>
+				<img src="img/logo.png" alt="logo">
+				<h1>Ka4viS</h1>
+			</div>
 			<nav id="menu">
 				<ul>
-					<li><a href="">
-						<h3>Главная</h3>
+					<li>
+						<h2>Портфолио</h2>
+					</li>
+					<li id="git"><a href="https://github.com/Barashizm">
+						<h2>GitHub</h2>
 					</a></li>
-					<li><a href="">
-						<h3>Резюме</h3>
-					</a></li>
-					<li><a href="">
-						<h3>Хобби</h3>
-						<nav id="submenu">
-							<ul>
-								<li><a href="">1</a></li>
-								<li><a href="">2</a></li>
-								<li><a href="">3</a></li>
-								<li><a href="">4</a></li>
-							</ul>
-						</nav>
+					<li><a href="https://vk.com/barashizm">
+						<h2>ВКонтакте</h2>
 					</a></li>
 				</ul>
 			</nav>
 		</header>
 		<main>
-			<div>
-	
+			<div class="mainPart" id="point">
+				<h2>Качкин Евгений Михайлович</h2>
+				<div><img src="" alt=""></div>
+				<div class="bold">
+					<p>Дата рождения:</p>
+					<p>Место проживания:</p>
+					<p>Семейное положение:</p>
+					<p>Опыт работы:</p>
+					<p>Образование:</p>
+				</div>
+				<div>
+					<p>15 октября 1994г</p>
+					<p>ЛО г.Всеволожск</p>
+					<p>Помолвлен</p>
+					<p>3 года</p>
+					<p>Высшее техническое</p>
+				</div>
+			</div>
+			<div class="mainPart" id="contacts">
+				<h3>Контакты</h3>
+				<div class="bold">
+					<p>Email:</p>
+					<p>Skype:</p>
+					<p>GitHub:</p>
+					<p>Телефон:</p>
+				</div>
+				<div>
+					<p>liret13@gmail.com</p>
+					<p>hochgeboren</p>
+					<p>Barashizm</p>
+					<p>+7(981)-185-54-74</p>
+				</div>
+			</div>
+			<div class="mainPart" id="me">
+				<h2>О себе</h2>
+				<h3>Личные качества</h3>
+				<div>
+					Есть желание обучаться, развиваться профессионально, стремиться к карьерному росту;
+					хочу повышать уровень знаний в данной области, обучаться новым технологиям и уметь применять их на практике;
+					достаточно коммуникабелен, общителен и разносторонен.
+				</div>
+				<h3>Ожидания от работы</h3>
+				<div>
+					Главное для успеха на любой работе для меня это коллектив! Хороший коллектив это задаток хорошо выполненной работы.
+					Конечно же возможность профессионального роста, повышения квалификации, условия труда.
+				</div>
+				<h3>Еще немного обо мне</h3>
+				<div>
+					Отлично выполняю четко поставленные задачи, умею поддержать беседу и хорошо слушаю.
+					Люблю отдохнуть за чашечкой хорошего кофе, с книгой или же с новыми интересными людьми.
+					Заинтересован в новых технологиях разной сферы и игровой индустрией, а так же люблю путешествия.
+					Хобби рисование и моделирование(постройка в масштабе моделей) кораблей.
+				</div>
 			</div>
 		</main>
 		<footer>
-			<a href=""></a>
-			<a href=""></a>
-			<a href=""></a>
-			<a href=""></a>
-			<p></p>
+			<p>Мой краткий сайт визитка.</p>
+			<p>2019</p>
 		</footer>
 	</div>
 </body>
