--- a/ka4vis.html
+++ b/ka4vis.html
@@ -14,8 +14,8 @@
 			</div>
 			<nav id="menu">
 				<ul>
-					<li>
-						<h2>Портфолио</h2>
+					<li id="rezume">
+						<h2>Резюме</h2>
 					</li>
 					<li id="git"><a href="https://github.com/Barashizm">
 						<h2>GitHub</h2>
@@ -27,9 +27,9 @@
 			</nav>
 		</header>
 		<main>
-			<div class="mainPart" id="point">
+			<div id="point">
 				<h2>Качкин Евгений Михайлович</h2>
-				<div><img src="" alt=""></div>
+				<img src="img/me.jpg" alt="me">
 				<div class="bold">
 					<p>Дата рождения:</p>
 					<p>Место проживания:</p>
@@ -45,28 +45,26 @@
 					<p>Высшее техническое</p>
 				</div>
 			</div>
-			<div class="mainPart" id="contacts">
+			<div id="contacts">
 				<h3>Контакты</h3>
 				<div class="bold">
 					<p>Email:</p>
 					<p>Skype:</p>
-					<p>GitHub:</p>
 					<p>Телефон:</p>
 				</div>
 				<div>
 					<p>liret13@gmail.com</p>
 					<p>hochgeboren</p>
-					<p>Barashizm</p>
 					<p>+7(981)-185-54-74</p>
 				</div>
 			</div>
-			<div class="mainPart" id="me">
+			<div id="me">
 				<h2>О себе</h2>
 				<h3>Личные качества</h3>
 				<div>
-					Есть желание обучаться, развиваться профессионально, стремиться к карьерному росту;
+					Основные знания HTML5&CSS3, JS, Git, при необходимости в работе освою ajax, jQuery, less, sass. Есть желание обучаться, развиваться профессионально, стремиться к карьерному росту;
 					хочу повышать уровень знаний в данной области, обучаться новым технологиям и уметь применять их на практике;
-					достаточно коммуникабелен, общителен и разносторонен.
+					коммуникабелен, общителен и разносторонен.
 				</div>
 				<h3>Ожидания от работы</h3>
 				<div>
@@ -75,10 +73,12 @@
 				</div>
 				<h3>Еще немного обо мне</h3>
 				<div>
+					Решил попробовать себя в этой сфере, имеются основные необходимые навыки, 
+					но нужна помощь в дальнейшем прогрессе и совершенствовании. Опыт в этой сфере небольшой и на уровне обучения и практики.
 					Отлично выполняю четко поставленные задачи, умею поддержать беседу и хорошо слушаю.
 					Люблю отдохнуть за чашечкой хорошего кофе, с книгой или же с новыми интересными людьми.
 					Заинтересован в новых технологиях разной сферы и игровой индустрией, а так же люблю путешествия.
-					Хобби рисование и моделирование(постройка в масштабе моделей) кораблей.
+					Хобби - рисование и моделирование (постройка в масштабе моделей, в моем случае кораблей).
 				</div>
 			</div>
 		</main>
